--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700,900|Roboto+Mono:300,400,500">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
 
+
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/magnific-popup.css">
   <link rel="stylesheet" href="css/jquery-ui.css">
@@ -26,9 +27,10 @@
 
   <link rel="stylesheet" href="css/style.css">
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  
 </head>
 
 <body>
@@ -47,30 +49,32 @@
     </div> <!-- .site-mobile-menu -->
 
     <div class="site-navbar text-white">
-      <div class="d-flex justify-content-between mt-3 p-4 border-bottom">
-        <div><span>logo</span> <b>Email us at :</b> example@mail.com</div>
-        <div>kanan <span class="border-left p-1">tel logo</span> NO TELEPHONE</div>
+      <div class="d-none d-md-flex justify-content-between mt-2 p-3 border-bottom">
+        <div><i class="fa fa-envelope p-2"></i><b>Email us at :</b> example@mail.com</div>
+        <div><i class="fa-brands fa-instagram p-2"></i> <i class="fa fa-phone border-left p-2"></i><span>no telephone</span></div>
       </div>
 
       <nav class="navbar navbar-expand-lg navbar-dark">
         <!-- Image and text -->
         <nav class="navbar navbar-light">
-          <a class="navbar-brand" href="#">
-            <img src="" width="30" height="30" class="d-inline-block align-top" alt="">
-            Kabupaten Brebes
+          <a class="navbar-brand d-flex ml-0 ml-lg-5" href="#">
+            <img src="images/logo_main.png" class="d-inline-block align-top img-fluid" alt="">
+            <h1 class="d-iline-block p-3">Kabupaten Brebes</h1>
           </a>
         </nav>
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">HOME <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">RECOMENDATION</a>
-            <a class="nav-item nav-link" href="#">CONTACT US</a>
+          <div class="navbar-nav mr-5">
+            <a class="nav-item nav-link active p-4" href="#">HOME <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link p-4" href="#">RECOMENDATION</a>
+            <a class="nav-item nav-link p-4" href="#">CONTACT US</a>
           </div>
         </div>
+
       </nav>
     </div>
 
