--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <!-- Image and text -->
         <nav class="navbar navbar-light">
           <a class="navbar-brand d-flex ml-0 ml-lg-5" href="#">
-            <img src="images/logo_main.png" class="d-inline-block align-top img-fluid" alt="">
+            <img src="images/logo_main.png" width="65px" height="20px" class="d-inline-block align-top img-fluid" alt="">
             <h1 class="d-iline-block p-3">Kabupaten Brebes</h1>
           </a>
         </nav>
@@ -185,19 +185,23 @@
     </div>
 
 
-    <div class="site-section bg-light">
-      <div class="container">
-        <div class="row justify-content-center mb-5">
-          <div class="col-md-7 text-center">
-            <div class="site-section-title">
-              <h2 class="text-capitalize">Beri Masukan Untuk Kami</h2>
+    <div style="background-image: url(/images/candi_pangkuan.jpg); background-size: cover; background-position: center; background-repeat: no-repeat; background-color: rgba(20, 38, 94, 0.5); height: 508px;" class="site-section position-relative" >
+      <div style="background-color: rgba(20, 38, 94, 0.5); top: 0; left: 0; height: 100%; width: 100%;" class="position-absolute">
+        <div class="container" style="padding-top: 150px;">
+          <div class="row justify-content-center mb-5">
+            <div class="col-md-7 text-center">
+              <div class="site-section-title">
+                <h2 class="text-capitalize text-white">Beri Masukan Untuk Kami</h2>
+              </div>
+              <p class="text-white">Semua kritik dan saran yang membangun sangat kami apresiasi demi informasi wisata di
+                Brebes lebih baik lagi.</p>
+              <button type="button" class="btn btn-outline-secondary">Contact Us</button>
             </div>
-            <p>Semua kritik dan saran yang membangun sangat kami apresiasi demi informasi wisata di Brebes lebih baik lagi.</p>
-            <button type="button" class="btn btn-outline-secondary">Contact Us</button>
           </div>
+      
         </div>
-
       </div>
+      
     </div>
 
 
